force-app/main/default/objects/Snapshot_producto_de_modulo__c/Snapshot_producto_de_modulo__c.object-meta.xml
<CustomObject>
    <label>Snapshot producto de módulo</label>
    <nameField>
        <label>Snapshot producto de módulo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots producto de módulo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>