force-app/main/default/objects/Snapshot_producto_de_modulo__c/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <label>Laboratorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>